# DungeonCrawler

./: README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-app.yml
src/event/: __init__.py  beacon.py  group.py  udplib.py
src/game/: avatar.py  dungeon.py  enemy.py  entity.py  input.py  item.py  main.py  player.py  room.py
src/multicast/: __init__.py  reciever.py  sender.py
src/networking/: reciever.py  sender.py
src/package_1/: __init__.py
tests/: test_game.py  test_main.py
